--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -8,15 +8,8 @@
         <!-- ============================================================== -->
         <!-- Start Page Content -->
         <!-- ============================================================== -->
-        <div class="row">
-          <div class="col-12">
-            <div class="card">
-              <div class="card-body">
-                <router-outlet></router-outlet>
-              </div>
-            </div>
-          </div>
-        </div>
+        <!-- Mi sistema de rutas -->
+        <router-outlet></router-outlet>
         <!-- ============================================================== -->
         <!-- End PAge Content -->
         <!-- ============================================================== -->
