--- a/src/app/page/progress/progress.component.html
+++ b/src/app/page/progress/progress.component.html
@@ -1,1 +1,51 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Progres Bar</h4>
+                <div class="progress m-t-20">
+                    <div class="progress-bar bg-primary progress-bar-striped active" aria-valuenow="50"
+                        aria-valuemin="0" aria-valuemax="100" style="height:15px;" role="progressbar"
+                        [style.width]="getPorcentaje">
+
+                        <span class="sr-only">50% Complete (success)</span>
+                    </div>
+                </div>
+                <div class="progress m-t-20">
+                    <div class="progress-bar bg-info progress-bar-striped active" aria-valuenow="50"
+                        aria-valuemin="0" aria-valuemax="100" style="height:15px;" role="progressbar"
+                        [style.width]="getPorcentaje2">
+
+                        <span class="sr-only">50% Complete (success)</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador 
+                [porcentaje]="progreso" 
+                (valorPorcentaje)="progreso = $event"
+                >
+            </app-incrementador>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador 
+                [porcentaje]="progreso2"
+                [btnClass]="'btn-info'" 
+                (valorPorcentaje)="progreso2 = $event"
+                >
+            </app-incrementador>
+            </div>
+        </div>
+    </div>
+</div>
