--- a/src/app/page/grafic1/grafic1.component.html
+++ b/src/app/page/grafic1/grafic1.component.html
@@ -1,1 +1,17 @@
-<p>grafic1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-dona title="Ventas" [data]="data1" ></app-dona>
+    </div>
+    <div class="col-6">
+        <app-dona title="Contratos" [data]="data2" ></app-dona>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <app-dona title="Salarios" [data]="data3" ></app-dona>
+    </div>
+    <div class="col-6">
+        <app-dona title="Productos" [data]="data4"></app-dona>
+    </div>
+</div>
