feat(Se agrego observables) Se agrego una seccion RXJS para entender los observables el bread drump se manejo con un observable para implementar y hacer uso de lo aprendido

--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -32,7 +32,8 @@
                     </a>
 
                     <ul aria-expanded="false" class="collapse" *ngFor="let subItemMenu of item.submenu">
-                        <li><a [routerLink]="subItemMenu.url">{{subItemMenu.titulo}}</a></li>
+                        <li><a [routerLink]="subItemMenu.url" routerLinkActive="active"
+                                [routerLinkActiveOptions]="{exact: true}">{{subItemMenu.titulo}}</a></li>
                     </ul>
                 </li>
 
